force-app/main/default/objects/refedge__POR_App_Configuration__c/fields/refedge__AccountTrigger__c.field-meta.xml
<CustomField>
    <fullName>refedge__AccountTrigger__c</fullName>
    <defaultValue>true</defaultValue>
    <label>AccountTrigger</label>
    <type>Checkbox</type>
</CustomField>