force-app/main/default/objects/refedge__POR_App_Configuration__c/fields/refedge__ContactTrigger__c.field-meta.xml
<CustomField>
    <fullName>refedge__ContactTrigger__c</fullName>
    <defaultValue>true</defaultValue>
    <label>ContactTrigger</label>
    <type>Checkbox</type>
</CustomField>