force-app/main/default/objects/refedge__POR_App_Configuration__c/fields/refedge__ContentTrigger__c.field-meta.xml
<CustomField>
    <fullName>refedge__ContentTrigger__c</fullName>
    <defaultValue>true</defaultValue>
    <label>ContentTrigger</label>
    <type>Checkbox</type>
</CustomField>