force-app/main/default/objects/refedge__POR_App_Configuration__c/fields/refedge__Create_Nomination_Reference_Activities__c.field-meta.xml
<CustomField>
    <fullName>refedge__Create_Nomination_Reference_Activities__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Nomination Reference Activities</label>
    <type>Checkbox</type>
</CustomField>