force-app/main/default/objects/refedge__POR_App_Configuration__c/fields/refedge__Data_Mapping_Trigger__c.field-meta.xml
<CustomField>
    <fullName>refedge__Data_Mapping_Trigger__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Uncheck this checkbox to disable the trigger for Data Mapping sObject.</inlineHelpText>
    <label>Data Mapping Trigger</label>
    <type>Checkbox</type>
</CustomField>