force-app/main/default/objects/refedge__POR_App_Configuration__c/fields/refedge__Group_Reference_Activity_Site_URL__c.field-meta.xml
<CustomField>
    <fullName>refedge__Group_Reference_Activity_Site_URL__c</fullName>
    <label>Group Reference Activity Site URL</label>
    <type>Url</type>
</CustomField>