force-app/main/default/objects/refedge__POR_App_Configuration__c/fields/refedge__Is_Merge_Duplicate_Profiles__c.field-meta.xml
<CustomField>
    <fullName>refedge__Is_Merge_Duplicate_Profiles__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Merge Duplicate Profiles</label>
    <type>Checkbox</type>
</CustomField>