force-app/main/default/objects/refedge__POR_App_Configuration__c/fields/refedge__Is_Reference_Leads_Updated__c.field-meta.xml
<CustomField>
    <fullName>refedge__Is_Reference_Leads_Updated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Update Reference Leads</label>
    <type>Checkbox</type>
</CustomField>