force-app/main/default/objects/refedge__POR_App_Configuration__c/fields/refedge__Is_Update_Reference_Content__c.field-meta.xml
<CustomField>
    <fullName>refedge__Is_Update_Reference_Content__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Update All Ref Content Related Accounts</label>
    <type>Checkbox</type>
</CustomField>