force-app/main/default/objects/refedge__POR_App_Configuration__c/fields/refedge__Is_Update_Reward_Declined_Request_Record__c.field-meta.xml
<CustomField>
    <fullName>refedge__Is_Update_Reward_Declined_Request_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Updated Reward Declined Request Record</label>
    <type>Checkbox</type>
</CustomField>