force-app/main/default/objects/refedge__POR_App_Configuration__c/fields/refedge__LeadTrigger__c.field-meta.xml
<CustomField>
    <fullName>refedge__LeadTrigger__c</fullName>
    <defaultValue>true</defaultValue>
    <label>LeadTrigger</label>
    <type>Checkbox</type>
</CustomField>