force-app/main/default/objects/refedge__POR_App_Configuration__c/fields/refedge__OpportunityProductTrigger__c.field-meta.xml
<CustomField>
    <fullName>refedge__OpportunityProductTrigger__c</fullName>
    <defaultValue>true</defaultValue>
    <label>OpportunityProductTrigger</label>
    <type>Checkbox</type>
</CustomField>