force-app/main/default/objects/refedge__POR_App_Configuration__c/fields/refedge__Site_URL__c.field-meta.xml
<CustomField>
    <fullName>refedge__Site_URL__c</fullName>
    <label>Site URL</label>
    <type>Url</type>
</CustomField>