force-app/main/default/objects/refedge__POR_App_Configuration__c/fields/refedge__Update_Account_in_Contact_Attributes__c.field-meta.xml
<CustomField>
    <fullName>refedge__Update_Account_in_Contact_Attributes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Update Account in Contact Attributes</label>
    <type>Checkbox</type>
</CustomField>