force-app/main/default/objects/refedge__POR_App_Configuration__c/fields/refedge__Update_All_User_License__c.field-meta.xml
<CustomField>
    <fullName>refedge__Update_All_User_License__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Update All User License</label>
    <type>Checkbox</type>
</CustomField>