force-app/main/default/objects/refedge__POR_App_Configuration__c/fields/refedge__Update_Attribute_in_Reference_Content__c.field-meta.xml
<CustomField>
    <fullName>refedge__Update_Attribute_in_Reference_Content__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To Update Attributes__c and Attribute_Ids__c field of Reference Content.</description>
    <label>Update Attributes in Reference Content</label>
    <type>Checkbox</type>
</CustomField>