force-app/main/default/objects/refedge__POR_App_Configuration__c/fields/refedge__Update_Contact_Available_Points__c.field-meta.xml
<CustomField>
    <fullName>refedge__Update_Contact_Available_Points__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Update Contact Available Points</label>
    <type>Checkbox</type>
</CustomField>