force-app/main/default/objects/refedge__POR_App_Configuration__c/fields/refedge__Update_Current_Available_Points_for_RBI__c.field-meta.xml
<CustomField>
    <fullName>refedge__Update_Current_Available_Points_for_RBI__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Update Current Available Points for RBI.</description>
    <label>Update Current Available Points</label>
    <type>Checkbox</type>
</CustomField>