force-app/main/default/objects/refedge__POR_App_Configuration__c/fields/refedge__Update_Filter_Numbers__c.field-meta.xml
<CustomField>
    <fullName>refedge__Update_Filter_Numbers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Update Numbers in Filters</label>
    <type>Checkbox</type>
</CustomField>