force-app/main/default/objects/refedge__POR_App_Configuration__c/fields/refedge__Update_Inheritable_Value_in_Attributes__c.field-meta.xml
<CustomField>
    <fullName>refedge__Update_Inheritable_Value_in_Attributes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Update Inheritable Value in Attributes</label>
    <type>Checkbox</type>
</CustomField>