force-app/main/default/objects/refedge__POR_App_Configuration__c/fields/refedge__Update_Related_Attribute_Mapping_for_A_C__c.field-meta.xml
<CustomField>
    <fullName>refedge__Update_Related_Attribute_Mapping_for_A_C__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Update Related Attribute Mapping for A&amp;C</label>
    <type>Checkbox</type>
</CustomField>